= cvs-fast-export project news =

Repository head::
   cvsconvert now properly escapes branch names in shell commands.
   cvssync can now sync from a local cvs respository.
   Fix for a minor bug when reporting fixups on out-of-order commits.

1.47: 2019-03-19::
   Deal gracefully with damaged attic files that yield null branch names.

1.46: 2019-03-18::
   Make cvsreduce so the right (escaping) thing when a filename contains @.
   In cvreduce, warn on files that aren't CVS masters.
   Avoid losing commits when warning "tip commit older than imputed branch join" seen
   Warn about optimization bug triggered by -O3, reduce to -O2.

1.45: 2019-01-22::
   Allow empty branch labels - these have been observed in the wild. 
   Always report both file and line in syntax errors, using gcc style.
   Documentation polishing.
   cppcheck cleanup.
   Minor port fixes to test machinery.

1.44: 2018-07-05::
   Fix slightly incorrect generation of default .gitignore file.
   Make cvsreduce work under Python 3, and test for that.

1.43: 2017-03-20::
   Revert <2014-11-19T18:11:22Z@flower.powernet.co.uk>, optimization was wrong.

1.42: 2017-03-06::
    Fix a typo in a property name that affects interoperability with reposurgeon.

1.41: 2017-02-14::
    Savannah changed how you need to interpret pseudo-URLs.

1.40: 2016-09-07::
    Add warnings about stock CVS vs. the MirOS patched version.

1.39: 2016-09-06::
    Fix GitLab issue #8: Exporting with commitids does not coalesce changesets.

1.38: 2016-02-28::
    All Python code in the suite is 2 & 3 polyglot and 8-bit clean.

1.37: 2016-01-29::
    New -c option for when you can't trust commit-IDs.
    Port patch for Sun systems.

1.36: 2015-12-22::
    Avoid a core dump in another pathological case.

1.35: 2015-11-23::
    Properly handle CVS masters with nonempty access lists.
    Bail out gracefully on pathological masters with no revisions.

1.34: 2015-09-25::
    Another Python compatibility fix.